Migrate extension to Chrome Side Panel API
- Switch from iframe overlay to native Chrome Side Panel API
- Update manifest to v0.2.0 with sidePanel permission
- Replace postMessage with chrome.storage.local for state sync
- Simplify trigger button to donut-only design (no text/dismiss)
- Add witty loading screen with scrolling messages
- Implement multi-tab support with independent analysis state
- Update fonts to Cormorant Infant and Poppins
- Fix icon loading to use icon-128.png
- Add automatic sidepanel.html build relocation

--- a/extension/src/sidepanel.html
+++ b/extension/src/sidepanel.html
@@ -3,10 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Eject - Product Safety</title>
+    <title>Ruh - Product Safety</title>
   </head>
   <body>
     <div id="app"></div>
-    <script type="module" src="./sidebar.ts"></script>
+    <script type="module" src="./sidepanel.ts"></script>
   </body>
 </html>
